[project]
name = "bioinf593proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "igraph>=1.0.0",
    "ipykernel>=7.1.0",
    "leidenalg>=0.11.0",
    "pyyaml>=6.0.3",
    "scanpy>=1.11.5",
    "scipy>=1.16.3",
    "sctypepy>=0.1.0",
    "squidpy>=1.6.5",
    "torch",
    "sctypepy",
    "scikit-learn"
]
